--- a/CommonUtils/pom.xml
+++ b/CommonUtils/pom.xml
@@ -39,5 +39,15 @@
     	<artifactId>java-sdk</artifactId>
     	<version>2.8.0</version>
 	</dependency> -->
+<!--   	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-simple</artifactId>
+  		<version>1.7.5</version>
+  	</dependency> -->
+  	<dependency> 
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.7.21</version>
+    </dependency>
   </dependencies>
 </project>
